--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ build-backend = "hatchling.build"
 packages = ["src"]
 
 [project]
-name = "emoji-tools-henry"
-version = "0.0.1"
+name = "emoji_tools_henry"
+version = "0.0.3"
 authors = [
   { name="Henry Backman", email="henry.backman@gmail.com" },
 ]
