--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ include LICENSE
 include MANIFEST.in
 include README.md
 include pyproject.toml
-include setup.cfg
 recursive-include tests *.py
+recursive-include static *
