--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,18 @@ packages = ["src"]
 
 [project]
 name = "emoji_tools_henry"
-version = "0.0.6"
+version = "0.0.7"
+authors = [
+  { name="Henry Backman", email="henry.backman@gmail.com" },
+]
+description = "Tools for working with emojis"
+readme = "README.md"
+requires-python = ">=3.8"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+
+[project.urls]
+homepage = "https://github.com/henrybackman/emoji-tools-henry"
